--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "betaBot",
   "version": "1.0.0",
   "description": "Beta discord bot",
-  "main": "index.js",
+  "main": "index.ts",
+  "scripts": {
+    "start": "tsc --watch & nodemon --quiet build/index.js"
+  },
   "repository": "git@github.com:wsoule/betaBot.git",
   "author": "Wyat Soule <wsoule679@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
+    "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.29.0"
   }
 }
